# glittr-core-public

./: .gitignore  Cargo.toml  README.md  local_env.sh  ngrok.yml  settings.yaml  watch.sh
configs/: bitcoin.conf  bitcoind.service  electrs.service  glittr.service
integration-tests/: airdrop.rs  basic.rs  collateralized.rs  free_mint.rs  lp.rs  mint_purchase.rs  nft.rs  pbs.rs  spec.rs  transfer.rs  utils.rs
scripts/: create_wallet.sh  generate_blocks.sh
src/: api.rs  az_base26.rs  borsh_serde.rs  compression.rs  config.rs  constants.rs  flaw.rs  helper_api.rs  indexer.rs  lib.rs  macros.rs  state.rs  types.rs  updater.rs  varint.rs  varuint.rs  varuint_dyn.rs
src/modules/: dummy_glyph.rs  mod.rs
src/store/: database.rs  mod.rs
src/transaction/: asset_contract.rs  custom_contract.rs  dummy_contract.rs  governance_contract.rs  header.rs  message.rs  mint_burn_asset.rs  mint_only_asset.rs  mod.rs  nft.rs  nft_contract.rs  shared.rs  spec.rs  transaction_shared.rs
src/updater/: burn.rs  collateralized.rs  mint.rs  mint_collateralized.rs  spec.rs  updater_shared.rs
tests/: lib.rs
