[package]
name = "glittr-core"
description = "Glittr protocol implementation"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
bitcoin = "0.32.3"
bitcoincore-rpc = "0.19.0"
borsh = "1.5.1"
borsh-derive = "1.5.1"
config = "0.14.0"
env_logger = "0.11.5"
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.22"
rocksdb = "0.22.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
serde_with = "3.11.0"
tokio = { version = "1.40.0", features = ["full"] }
itertools = "0.13.0"

[[bin]]
name = "glittr"
path = "src/bin/main.rs"

[lib]
name = "glittr"
path = "src/lib.rs"

[dev-dependencies]
mockcore = { version = "0.0.1", git = "https://github.com/ordinals/ord", rev = "387fe734b5c571e2dc76ea6b9fc41eacb0a09103" }
tempfile = "3.13.0"
