[package]
name = "glittr-core"
description = "Glittr protocol implementation"
version = "0.1.0"
edition = "2021"

[features]
helper-api = []

[dependencies]
axum = "0.7.7"
bitcoin = "0.32.3"
bitcoincore-rpc = "0.19.0"
borsh = "1.5.1"
borsh-derive = "1.5.1"
config = "0.14.0"
env_logger = "0.11.5"
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.22"
num = "0.4.3"
rocksdb = "0.22.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
serde_with = "3.11.0"
tokio = { version = "1.40.0", features = ["full"] }
itertools = "0.13.0"
paste = "1.0"
growable-bloom-filter = "2.1.1"
miniz_oxide = "0.8.0"
base64 = "0.22.1"
aes-gcm = "0.10.3"
sha2 = "0.10.8"
rand = "0.8.5"
ctrlc = {version = "3.4.5", features = ["termination"] }

[[bin]]
name = "glittr"
path = "src/bin/main.rs"

[lib]
name = "glittr"
path = "src/lib.rs"

[dev-dependencies]
mockcore = { version = "0.0.1", git = "https://github.com/ordinals/ord", rev = "387fe734b5c571e2dc76ea6b9fc41eacb0a09103" }
tempfile = "3.13.0"
