[package]
name = "glittr-core"
description = "Glittr protocol implementation"
version = "0.1.0"
edition = "2021"

[features]
helper-api = []

[[test]]
name = "integration_tests_lp"
path = "integration-tests/lp.rs"

[[test]]
name = "integration_tests_basic"
path = "integration-tests/basic.rs"

[[test]]
name = "integration_tests_free_mint"
path = "integration-tests/free_mint.rs"

[[test]]
name = "integration_tests_mint_purchase"
path = "integration-tests/mint_purchase.rs"

[[test]]
name = "integration_tests_nft"
path = "integration-tests/nft.rs"

[[test]]
name = "integration_tests_spec"
path = "integration-tests/spec.rs"

[[test]]
name = "integration_tests_transfer"
path = "integration-tests/transfer.rs"

[[test]]
name = "integration_tests_pbs"
path = "integration-tests/pbs.rs"

[[test]]
name = "integration_tests_collateralized"
path = "integration-tests/collateralized.rs"

[[test]]
name = "integration_tests_airdrop"
path = "integration-tests/airdrop.rs"

[dependencies]
axum = "0.7.7"
bitcoin = "0.32.3"
bitcoincore-rpc = "0.19.0"
borsh = {version = "1.5.3", features = ["derive", "std"]}
config = "0.14.0"
env_logger = "0.11.5"
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.22"
num = "0.4.3"
rocksdb = "0.22.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
serde_with = "3.11.0"
tokio = { version = "1.40.0", features = ["full"] }
itertools = "0.13.0"
paste = "1.0"
growable-bloom-filter = "2.1.1"
miniz_oxide = "0.8.0"
base64 = "0.22.1"
aes-gcm = "0.10.3"
sha2 = "0.10.8"
rand = "0.8.5"
brotli = "7.0.0"
num-traits = "0.2.19"
ctrlc = {version = "3.4.5", features = ["termination"] }
tower-http = { version = "0.6.2", features = ["cors"] }

[[bin]]
name = "glittr"
path = "src/bin/main.rs"

[lib]
name = "glittr"
path = "src/lib.rs"

[dev-dependencies]
mockcore = { version = "0.0.1", git = "https://github.com/ordinals/ord", rev = "387fe734b5c571e2dc76ea6b9fc41eacb0a09103" }
tempfile = "3.13.0"
